Fix hibernate query issues